# ogame

./: README.md  main.py  pyproject.toml  trade.py
src/ogame/: __init__.py
